# drunkchess

./: .gitignore  CMakeLists.txt  IOhandler.cpp  IOhandler.h  README.md  autogen-native.sh  autogen.bat  autogen.sh  autorun.sh  chess-board.cpp  chess-board.h  chess-peice-codes.h  chess-peice.cpp  chess-peice.h  error.h  logger.cpp  main.cpp
django/drunkchess/: manage.py
django/drunkchess/drunkchess/: asgi.py  settings.py  urls.py  wsgi.py
djangoproj/: db.sqlite3
djangoproj/djangoproj/: settings.py  urls.py
djangoproj/drunkchess/: __init__.py  apps.py  models.py  urls.py  views.py
djangoproj/drunkchess/migrations/: 0001_initial.py
djangoproj/drunkchess/static/: styles.css
djangoproj/drunkchess/templates/drunkchess/: board.html  leader.html
src/: IOhandler.cpp  IOhandler.h  chess-board.cpp  chess-board.h  chess-peice-code.cpp  chess-peice-codes.h  chess-peice.cpp  chess-peice.h  error.h  logger.cpp  logger.h  main.cpp
test/: test.py
